src/documents/styles/_modules/header.scss
#container header,
body.framed header
{
    position: relative;
    width: 100%;
    min-height: 75px;
    color: $color-header-base;

    @include background-image(
        linear-gradient(300deg, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0) 45%,rgba(0,0,0,0) 55%,rgba(0,0,0,0.8) 100%),
        url(../images/layout/header-bg.png)
    );

    h1, h2, h3
    {
        color: $color-header-textheading;
    }

    a
    {
        @include link($color-header-link, $color-header-link-hover);
    }

    .outer
    {
        min-height: 75px;

        .inner
        {
            @include outer-container;
        }
    }

    /* Logo */
    figure#header-logo
    {
        display: inline-block;
        margin-left: 5px;
        width: 240px;
        height: 48px;
        background: url(../images/layout/komodo-logo.png) no-repeat;
        background-size: 100%;
    }

    .button.collapser
    {
        display: none;
    }

    nav
    {
        position: relative;
        float: right;

        & > ul
        {
            list-style: none;
            margin: 0;
            padding: 0;

            & > li
            {
                display: inline-block;
                position: relative;

                .badge
                {
                    position: absolute;
                    top: -10px;
                    right: 15px;
                }

                ul
                {
                    display: none;
                    position: absolute;
                    z-index: 10;
                    top: 20px;
                    left: 0;
                    padding: 0;
                    width: 150px;

                    li a
                    {
                        display: block;
                        padding: 5px;
                        background: rgba(39, 45, 44, 0.9);
                        @include transition(color 0.2s ease-in-out, background 0.2s ease-in-out);

                        &:hover
                        {
                            background: rgba(60,60,60,0.9);
                        }
                    }
                }

                &.has-sub:hover
                {
                    background: rgba(39, 45, 44, 0.9);

                    ul
                    {
                        display: block;
                    }
                }
            }
            
            li a
            {
                font-family: $font-header-nav;
                font-weight: 300;
                font-size: 13pt;
                color: $color-header-nav-link;
                text-transform: uppercase;
                text-decoration: none;
                @include link($color-header-nav-link, $color-header-nav-link-hover);

                &:hover
                {
                    text-decoration: none;
                    text-shadow: 0 0 1px rgba(255,255,255,0.4);
                }
            }

            & > li > a
            {
                display: block;
                line-height: 35px;
                vertical-align: middle;
                padding: 0 15px;
                border: 0;
            }
        }
    }

    @include media($nav-reduce)
    {
        nav > ul > li > a
        {
            font-size: 12pt;
            padding: 0 10px;
        }
    }

    @include media($nav-reduce-further)
    {
        nav > ul > li > a
        {
            font-size: 11.5pt;
            padding: 0 8px;
        }
    }

    @include media($nav-collapse)
    {
        .nav-wrap
        {
            display: relative;

            .collapser
            {
                position: relative;
                z-index: 110;
                display: block;
                font-size: 30px;
                margin-top: 15px;
                margin-right: 15px;
                float: right;
            }

            nav:not(.expanded)
            {
                display: none;
            }

            nav
            {
                border-radius: 2px;
                position: absolute;
                z-index: 999;
                background: rgba(39, 45, 44, 0.9);
                text-align: right;

                top: -5px;
                right: 70px;

                & > ul > li
                {
                    display: block;
                    width: 160px;

                    .badge
                    {
                        display: none;
                    }

                    &.has-sub ul
                    {
                        left: -150px;
                        top: -15px;
                    }

                    & > a
                    {
                        @include transition(color 0.2s ease-in-out, background 0.2s ease-in-out);
                        font-size: 13pt;

                        &:hover
                        {
                            background: rgba(255,255,255,0.1);
                        }
                    }
                }
            }
        }
    }

    .underline
    {
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        height: 6px;
        background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHUlEQVQImWOIWL5LigEKwjbs9GVA5sAlcXMYGBgAEEwPfa7qf48AAAAASUVORK5CYII=) repeat;
    }
}

